// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bsky views with mutes from mute lists > embeds lists in posts 1`] = `
{
  "author": {
    "associated": {
      "activitySubscription": {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
    "labels": [
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-a",
      },
      {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-b",
      },
    ],
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  "bookmarkCount": 0,
  "cid": "cids(0)",
  "embed": {
    "$type": "app.bsky.embed.record#view",
    "record": {
      "$type": "app.bsky.graph.defs#listView",
      "cid": "cids(4)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "description": "new descript",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "listItemCount": 3,
      "name": "updated alice mutes",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(2)",
      "viewer": {
        "muted": false,
      },
    },
  },
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": [],
  "likeCount": 0,
  "quoteCount": 0,
  "record": {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "embed": {
      "$type": "app.bsky.embed.record",
      "record": {
        "cid": "cids(3)",
        "uri": "record(2)",
      },
    },
    "text": "list embed!",
  },
  "replyCount": 0,
  "repostCount": 0,
  "uri": "record(0)",
  "viewer": {
    "bookmarked": false,
    "embeddingDisabled": false,
    "threadMuted": false,
  },
}
`;

exports[`bsky views with mutes from mute lists > flags mutes in threads 1`] = `
{
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(2)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(2)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "likeCount": 3,
    "quoteCount": 0,
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": {
      "bookmarked": false,
      "embeddingDisabled": false,
      "like": "record(4)",
      "repost": "record(3)",
      "threadMuted": false,
    },
  },
  "replies": [
    {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": {
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "did": "user(2)",
          "handle": "carol.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "followedBy": "record(8)",
            "following": "record(7)",
            "muted": true,
            "mutedByList": {
              "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
              "cid": "cids(4)",
              "indexedAt": "1970-01-01T00:00:00.000Z",
              "labels": [],
              "listItemCount": 3,
              "name": "alice mutes",
              "purpose": "app.bsky.graph.defs#modlist",
              "uri": "record(6)",
              "viewer": {
                "muted": true,
              },
            },
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(3)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(5)",
        "viewer": {
          "bookmarked": false,
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "threadContext": {},
    },
    {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": {
        "author": {
          "associated": {
            "activitySubscription": {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(1)",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": [],
          "viewer": {
            "blockedBy": false,
            "following": "record(10)",
            "muted": true,
            "mutedByList": {
              "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
              "cid": "cids(4)",
              "indexedAt": "1970-01-01T00:00:00.000Z",
              "labels": [],
              "listItemCount": 3,
              "name": "alice mutes",
              "purpose": "app.bsky.graph.defs#modlist",
              "uri": "record(6)",
              "viewer": {
                "muted": true,
              },
            },
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(5)",
        "embed": {
          "$type": "app.bsky.embed.images#view",
          "images": [
            {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(4)/cids(6)",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(4)/cids(6)",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(5)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(9)",
            "val": "test-label",
          },
          {
            "cid": "cids(5)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(9)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 0,
        "quoteCount": 0,
        "record": {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": {
            "$type": "app.bsky.embed.images",
            "images": [
              {
                "alt": "../dev-env/assets/key-landscape-small.jpg",
                "image": {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": {
                    "$link": "cids(6)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": {
            "parent": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(9)",
        "viewer": {
          "bookmarked": false,
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "threadContext": {},
    },
  ],
  "threadContext": {},
}
`;

exports[`bsky views with mutes from mute lists > returns a users own list mutes 1`] = `
{
  "cursor": "0000000000000__bafycid",
  "lists": [
    {
      "cid": "cids(0)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "blah blah",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "listItemCount": 0,
      "name": "new list",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(0)",
      "viewer": {
        "muted": true,
      },
    },
    {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "cid": "cids(3)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "big list of mutes",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "listItemCount": 3,
      "name": "alice mutes",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(3)",
      "viewer": {
        "muted": true,
      },
    },
  ],
}
`;

exports[`bsky views with mutes from mute lists > returns lists associated with a user 1`] = `
{
  "cursor": "0000000000000__bafycid",
  "lists": [
    {
      "cid": "cids(0)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "blah blah",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "listItemCount": 0,
      "name": "new list",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(0)",
      "viewer": {
        "muted": false,
      },
    },
    {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "cid": "cids(3)",
      "creator": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "big list of mutes",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "listItemCount": 3,
      "name": "alice mutes",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(3)",
      "viewer": {
        "muted": true,
      },
    },
  ],
}
`;

exports[`bsky views with mutes from mute lists > returns the contents of a list 1`] = `
{
  "cursor": "0000000000000__bafycid",
  "items": [
    {
      "subject": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "chat": {
            "allowIncoming": "none",
          },
        },
        "did": "user(2)",
        "handle": "dan.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "uri": "record(3)",
    },
    {
      "subject": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(3)",
        "handle": "carol.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(5)",
          "muted": true,
          "mutedByList": {
            "avatar": "https://bsky.public.url/img/avatar/plain/user(0)/cids(1)",
            "cid": "cids(0)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": [],
            "listItemCount": 3,
            "name": "alice mutes",
            "purpose": "app.bsky.graph.defs#modlist",
            "uri": "record(0)",
            "viewer": {
              "muted": true,
            },
          },
        },
      },
      "uri": "record(4)",
    },
    {
      "subject": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(4)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "following": "record(7)",
          "muted": true,
          "mutedByList": {
            "avatar": "https://bsky.public.url/img/avatar/plain/user(0)/cids(1)",
            "cid": "cids(0)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": [],
            "listItemCount": 3,
            "name": "alice mutes",
            "purpose": "app.bsky.graph.defs#modlist",
            "uri": "record(0)",
            "viewer": {
              "muted": true,
            },
          },
        },
      },
      "uri": "record(6)",
    },
  ],
  "list": {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(0)/cids(1)",
    "cid": "cids(0)",
    "creator": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(0)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(2)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(2)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(1)",
        "muted": false,
      },
    },
    "description": "big list of mutes",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "listItemCount": 3,
    "name": "alice mutes",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(0)",
    "viewer": {
      "muted": true,
    },
  },
}
`;
